# d100_d400_code_1149Z

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
analyses/: evaluate_models.py  model_training.py
data/processed/: seoul_bike_cleaned.parquet
notebooks/: eda_cleaning.ipynb
src/bike_demand/: evaluation.py  feature_engineering.py  metrics.py  model_training.py  plotting.py  preprocessing.py
src/bike_demand.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/bike_demand/data/: load_data.py  preprocessing.py
src/bike_demand/evaluation/: metrics.py
src/bike_demand/feature_engineering/: __init__.py  transformers.py
src/bike_demand/modelling/: __init__.py  glm_pipeline.py  lgbm_pipeline.py  sample_split.py
tests/: test_feature_engineering.py
